--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.16.3",
     "mongoose": "^5.1.5",
     "morgan": "^1.9.0",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "socket.io": "^2.1.1"
   },
   "scripts": {
     "start:server": "cd backend && nodemon server.js --exec babel-node --presets es2015",
