--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
+    "socket.io-client": "^2.1.1",
     "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
