--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.3",
-    "concurrently": "^3.5.1",
+    "bootstrap": "^4.1.2",
+    "concurrently": "^3.6.0",
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
     "mongoose": "^5.1.5",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.5",
+    "popper.js": "^1.14.3",
     "socket.io": "^2.1.1"
   },
   "scripts": {
